--- a/EtAlii.BinanceMagic.Service/Trading/Circular/CircularListItem.razor
+++ b/EtAlii.BinanceMagic.Service/Trading/Circular/CircularListItem.razor
@@ -10,11 +10,11 @@
             </Step>
             <Step Name="LastSuccess">
                 <Marker><Icon Name="IconName.Check" /></Marker>
-                <Caption><small><div class="text-center">@((MarkupString)Context.CurrentTransaction?.LastSuccess.ToMultiLineHtml())</div></small></Caption>
+                <Caption><small><div class="text-center">@((MarkupString)Context.CurrentTransaction?.LastSuccess.ToMultiLineHtml("None"))</div></small></Caption>
             </Step>
             <Step Name="NextAction">
                 <Marker><Icon Name="@("fa-history")" /></Marker>
-                <Caption><small><div class="text-center">@((MarkupString)Context.CurrentTransaction?.NextCheck.ToMultiLineHtml())</div></small></Caption>
+                <Caption><small><div class="text-center">@((MarkupString)Context.CurrentTransaction?.NextCheck.ToMultiLineHtml("Now"))</div></small></Caption>
             </Step>
             <Step Name="End">
                 <Marker><Icon Name="@(Context.Trading.TradeMethod == TradeMethod.BackTest ? "fa-flag-checkered" : "fa-infinity")"/></Marker>   
