--- a/EtAlii.BinanceMagic.Service/Trading/Circular/CircularListItem.razor
+++ b/EtAlii.BinanceMagic.Service/Trading/Circular/CircularListItem.razor
@@ -28,5 +28,5 @@
             <StepPanel Name="End" />
         </Content>
     </Steps>
-    <h1 class="text-right">@Context.Trading.TotalProfit.ToHtml("") @Context.Trading.ReferenceSymbol</h1>            
+    <h1 class="text-right">@Context.Trading.TotalProfit.ToProfitHtml() @Context.Trading.ReferenceSymbol</h1>            
 </ListGroupItem>
