--- a/EtAlii.BinanceMagic.Service/Trading/Dashboard.razor
+++ b/EtAlii.BinanceMagic.Service/Trading/Dashboard.razor
@@ -5,8 +5,8 @@
 @inject AlgorithmManager _algorithmManager
 
 <Row>
-    <Column ColumnSize="ColumnSize.IsFull.OnMobile.IsHalf.OnTablet.Is4.OnDesktop">
-        <Card Margin="Margin.Is2">
+    <Column ColumnSize="DefaultLayout.ItemDashboardColumnWidth">
+        <Card Margin="DefaultLayout.Margin">
             <CardHeader>
                 <Icon Name="@("fa-magic")" />
                 Accumulated 
@@ -21,8 +21,8 @@
         </Card>
     </Column>
     
-    <Column ColumnSize="ColumnSize.IsFull.OnMobile.IsHalf.OnTablet.Is4.OnDesktop">
-        <Card Margin="Margin.Is2">
+    <Column ColumnSize="DefaultLayout.ItemDashboardColumnWidth">
+        <Card Margin="DefaultLayout.Margin">
             <CardHeader>
                 <Icon Name="@("fa-chart-line")" />
                 One-off trading 
@@ -37,8 +37,8 @@
         </Card>
     </Column>
 
-    <Column ColumnSize="ColumnSize.IsFull.OnMobile.IsHalf.OnTablet.Is4.OnDesktop">
-        <Card Margin="Margin.Is2">
+    <Column ColumnSize="DefaultLayout.ItemDashboardColumnWidth">
+        <Card Margin="DefaultLayout.Margin">
             <CardHeader>
                 <Icon Name="@("fa-chart-bar")" />
                 Simple trading 
@@ -53,8 +53,8 @@
         </Card>
     </Column>
 
-    <Column ColumnSize="ColumnSize.IsFull.OnMobile.IsHalf.OnTablet.Is4.OnDesktop">
-        <Card Margin="Margin.Is2">
+    <Column ColumnSize="DefaultLayout.ItemDashboardColumnWidth">
+        <Card Margin="DefaultLayout.Margin">
             <CardHeader>
                 <Icon Name="@("fa-infinity")" />
                 Cyclic trading 
@@ -69,8 +69,8 @@
         </Card>
     </Column>
 
-    <Column ColumnSize="ColumnSize.IsFull.OnMobile.IsHalf.OnTablet.Is4.OnDesktop">
-        <Card Margin="Margin.Is2">
+    <Column ColumnSize="DefaultLayout.ItemDashboardColumnWidth">
+        <Card Margin="DefaultLayout.Margin">
             <CardHeader>
                 <Icon Name="@("fa-flask")" />
                 Experimental trading 
