--- a/EtAlii.BinanceMagic.Service/Trading/OneOff/OneOffView.razor
+++ b/EtAlii.BinanceMagic.Service/Trading/OneOff/OneOffView.razor
@@ -4,7 +4,7 @@
 
 @inherits ViewBase<OneOffTransaction, OneOffTrading, OneOffAlgorithmRunner>
 
-<Row Margin="Margin.Is2">
+<Row Margin="DefaultLayout.Margin">
     <Column ColumnSize="ColumnSize.Is1">
         <Button Color="Color.Primary">
             <Icon Name="IconName.Pause" />
