--- a/EtAlii.BinanceMagic.Service/Trading/OneOff/OneOffList.razor
+++ b/EtAlii.BinanceMagic.Service/Trading/OneOff/OneOffList.razor
@@ -4,11 +4,11 @@
 
 @inherits ListBase<OneOffTransaction, OneOffTrading>
 
-<Heading Margin="Margin.Is2">
+<Heading Margin="DefaultLayout.Margin">
     <Icon IconName="@("fa-chart-line")"/> One-off tradings
 </Heading>
 
-<ListGroup Margin="Margin.Is2">
+<ListGroup Margin="DefaultLayout.Margin">
     <Repeater Items="@Tradings">
     <ListGroupItem Clicked="@(() => OnTradingSelected(context.Context.Trading.Id))">
         @context.Context.Trading.Name
@@ -17,7 +17,7 @@
 </ListGroup>
 @if (ApplicationContext.IsOperational)
 {
-    <ListGroup Margin="Margin.Is2">
+    <ListGroup Margin="DefaultLayout.Margin">
         <ListGroupItem Clicked="@OnEditSelected">
             <Icon Name="@("fa-plus")"/> Add
         </ListGroupItem>
@@ -25,5 +25,5 @@
 }
 else
 {
-    <Paragraph Margin="Margin.Is2">Application is not yet configured correctly</Paragraph>
+    <Paragraph Margin="DefaultLayout.Margin">Application is not yet configured correctly</Paragraph>
 }
