--- a/EtAlii.BinanceMagic.Service/Trading/Simple/SimpleView.razor
+++ b/EtAlii.BinanceMagic.Service/Trading/Simple/SimpleView.razor
@@ -4,7 +4,7 @@
 
 @inherits ViewBase<SimpleTransaction, SimpleTrading, SimpleAlgorithmRunner>
 
-<Row Margin="Margin.Is2">
+<Row Margin="DefaultLayout.Margin">
     <Column ColumnSize="ColumnSize.Is1">
         <Button Color="Color.Primary">
             <Icon Name="IconName.Pause" />
@@ -43,7 +43,7 @@
             </Table>
         </Card>        
     </Column>
-    <Column ColumnSize="ColumnSize.Is8.OnDesktop.IsAuto.OnTablet">
+    <Column ColumnSize="ColumnSize.Is11.OnDesktop.IsAuto.OnTablet">
         <Card>
             <CardHeader>Current cycle</CardHeader>
               <Table>
