--- a/EtAlii.BinanceMagic.Service/Trading/Circular/CircularTransactionCard.razor
+++ b/EtAlii.BinanceMagic.Service/Trading/Circular/CircularTransactionCard.razor
@@ -2,23 +2,30 @@
 
 <Card>
     <CardHeader>@Title</CardHeader>
-    <Table Striped="false" Borderless="true" Narrow="true">
-        <TableBody>
-            <TableRow>
-                <TableRowCell>Sell: </TableRowCell><TableRowCell><span style="@SellPriceStyle">@Transaction.SellPrice.ToHtml("+") @Trading.ReferenceSymbol</span></TableRowCell>
-                <TableRowCell>Quantity: </TableRowCell><TableRowCell>@Transaction.SellQuantity.ToHtml("+") @Transaction.SellSymbol</TableRowCell>
-                <TableRowCell>Trend: </TableRowCell><TableRowCell><span style="@SellTrendStyle">@Transaction.SellTrend.ToShortHtml()</span></TableRowCell>
-            </TableRow>
-            <TableRow>
-                <TableRowCell>Buy: </TableRowCell><TableRowCell><span style="@BuyPriceStyle">@Transaction.BuyPrice.ToHtml("-") @Trading.ReferenceSymbol</span></TableRowCell>
-                <TableRowCell>Quantity: </TableRowCell><TableRowCell>@Transaction.BuyQuantity.ToHtml("-") @Transaction.BuySymbol</TableRowCell>
-                <TableRowCell>Trend: </TableRowCell><TableRowCell><span style="@BuyTrendStyle">@Transaction.BuyTrend.ToShortHtml()</span></TableRowCell>
-            </TableRow>
-            <TableRow>
-                <TableRowCell>Diff: </TableRowCell><TableRowCell><span style="@DifferenceStyle">@Transaction.Difference.ToHtml() @Trading.ReferenceSymbol</span></TableRowCell>
-                <TableRowCell>Target: </TableRowCell><TableRowCell>@Transaction.Target.ToHtml("+") @Trading.ReferenceSymbol</TableRowCell>
-                <TableRowCell></TableRowCell><TableRowCell></TableRowCell>
-            </TableRow>
-        </TableBody>
-    </Table>
+    <CardBody>
+    <div class="row">
+        <div class="col-xs-1 col-sm-1">Sell: </div>
+        <div class="col-xs-2 col-sm-3"><span style="@SellPriceStyle">@Transaction.SellPrice.ToHtml("+") @Trading.ReferenceSymbol</span></div>
+        <div class="col-xs-1 col-sm-1">Quantity: </div>
+        <div class="col-xs-2 col-sm-3">@Transaction.SellQuantity.ToHtml("+") @Transaction.SellSymbol</div>
+        <div class="col-xs-1 col-sm-1">Trend: </div>
+        <div class="col-xs-1 col-sm-2"><span style="@SellTrendStyle">@Transaction.SellTrend.ToShortHtml()</span></div>
+    </div>
+    <div class="row">
+        <div class="col-xs-1 col-sm-1">Buy: </div>
+        <div class="col-xs-2 col-sm-3"><span style="@BuyPriceStyle">@Transaction.BuyPrice.ToHtml("-") @Trading.ReferenceSymbol</span></div>
+        <div class="col-xs-1 col-sm-1">Quantity: </div>
+        <div class="col-xs-2 col-sm-3">@Transaction.BuyQuantity.ToHtml("-") @Transaction.BuySymbol</div>
+        <div class="col-xs-1 col-sm-1">Trend: </div>
+        <div class="col-xs-1 col-sm-2"><span style="@BuyTrendStyle">@Transaction.BuyTrend.ToShortHtml()</span></div>
+    </div>
+    <div class="row">
+        <div class="col-xs-1 col-sm-1">Diff: </div>
+        <div class="col-xs-2 col-sm-3"><span style="@DifferenceStyle">@Transaction.Difference.ToHtml() @Trading.ReferenceSymbol</span></div>
+        <div class="col-xs-1 col-sm-1">Target: </div>
+        <div class="col-xs-2 col-sm-3">@Transaction.Target.ToHtml("+") @Trading.ReferenceSymbol</div>
+        <div class="col-xs-1 col-sm-1"></div>
+        <div class="col-xs-1 col-sm-2"></div>
+    </div>
+    </CardBody>
 </Card>        
