--- a/EtAlii.BinanceMagic.Service/wwwroot/site.css
+++ b/EtAlii.BinanceMagic.Service/wwwroot/site.css
@@ -90,3 +90,15 @@ html, body {
         transform: scale3D(0, 0, 1);
     }
 }
+
+.step-circle {
+    color: black;
+    border: 2px solid black;
+}
+
+.step-circle::before {
+    color: black; }
+
+.step-text {
+    color: black;
+}
