--- a/EtAlii.BinanceMagic.Service/Configuration/Settings.razor
+++ b/EtAlii.BinanceMagic.Service/Configuration/Settings.razor
@@ -14,7 +14,7 @@
             </CardHeader>
                 <CardBody>
 
-                    <Validation Validator="@ValidationRule.IsNotEmpty">
+                    <Validation Validator="ValidationRule.IsNotEmpty">
                         <Field>
                             <FieldLabel>Binance API key</FieldLabel>
                             <TextEdit 
