Start of edge algorithm.

--- a/EtAlii.BinanceMagic.Service/Shared/NavMenu.razor
+++ b/EtAlii.BinanceMagic.Service/Shared/NavMenu.razor
@@ -49,6 +49,13 @@
                 </BarItem>
                 
                 <BarItem>                    
+                    <BarLink To="/edge/list">
+                        <BarIcon IconName="@("fa-dice")"/>
+                        Edge
+                    </BarLink>
+                </BarItem>
+                
+                <BarItem>                    
                     <BarLink To="/experimental/list">
                         <BarIcon IconName="@("fa-flask")" />
                         Experimental 
