First big leap in one-off trading.

--- a/EtAlii.BinanceMagic.Service/Trading/Edge/EdgeList.razor
+++ b/EtAlii.BinanceMagic.Service/Trading/Edge/EdgeList.razor
@@ -16,7 +16,7 @@
     <Repeater Items="@Tradings">
         <Row Margin="DefaultLayout.Margin">
             <Column ColumnSize="ColumnSize.Is11.OnDesktop.IsAuto.OnTablet">
-                <EdgeListItem Context="@context.Context"/>
+                @* <EdgeListItem Context="@context.Context"/> *@
             </Column>
         </Row>
     </Repeater>
