--- a/EtAlii.BinanceMagic.Service/Trading/OneOff/OneOffList.razor
+++ b/EtAlii.BinanceMagic.Service/Trading/OneOff/OneOffList.razor
@@ -20,16 +20,35 @@
                 </CardHeader>
                 <CardBody>
                     <CardText>
-                        Total profit: @($"{_totalProfit:0.00} {ApplicationContext.ReferenceSymbol}")<br/>
-                        Open: @(_totalOpen)x<br/>
-                        Success: @(_totalSuccesses)x<br/>
-                        Failure: @(_totalFailure)x<br/>
-                        <br/>
+                        <Table Borderless="true" Narrow="true">
+                            <TableBody>
+                                <TableRow>
+                                    <TableRowCell>Live value: </TableRowCell>
+                                    <TableRowCell>@($"{_totalCurrentProfit:0.00} {ApplicationContext.ReferenceSymbol}")</TableRowCell>
+                                </TableRow>
+                                <TableRow>
+                                    <TableRowCell>Total profit: </TableRowCell>
+                                    <TableRowCell>@($"{_totalGuaranteedProfit:0.00} {ApplicationContext.ReferenceSymbol}")</TableRowCell>
+                                </TableRow>
+                                <TableRow>
+                                    <TableRowCell>Open: </TableRowCell>
+                                    <TableRowCell>@(_totalOpen) trades</TableRowCell>
+                                </TableRow>
+                                <TableRow>
+                                    <TableRowCell>Success: </TableRowCell>
+                                    <TableRowCell>@(_totalSuccesses) trades</TableRowCell>
+                                </TableRow>
+                                <TableRow>
+                                    <TableRowCell>Cancelled: </TableRowCell>
+                                    <TableRowCell>@(_totalFailure) trades</TableRowCell>
+                                </TableRow>
+                            </TableBody>
+                        </Table>
                     </CardText>
                     <Button 
                         Height="@ButtonHeight"
                         Width="@ButtonWidth"
-                        Color="Color.Primary" Clicked="@(OnEditSelected)"><Icon Name="@("fa-plus")"/> Add<br/>&nbsp;</Button>
+                        Color="Color.Primary" Clicked="@(OnEditSelected)"><Icon Name="@("fa-plus")"/> Add</Button>
                 </CardBody>
             </Card>
         </Column>
@@ -42,21 +61,39 @@
                     </CardHeader>
                     <CardBody>
                         <CardText>
-                            Purchase: 0.3423 XRP<br/>
-                            Worth: 234.98 USDT<br/>
-                            Target: 15.00% <br/>
-                            Current: 10.12%<br/>
-                            Duration: @(ToTime(DateTime.Now - context.Context.Trading.Start)) <br/>
+                            <Table Borderless="true" Narrow="true">
+                                <TableBody>
+                                    <TableRow>
+                                        <TableRowCell>Purchase value: </TableRowCell>
+                                        <TableRowCell>@($"{context.Context.Trading.PurchaseQuoteQuantity:0.00}") @(context.Context.Trading.ReferenceSymbol)</TableRowCell>
+                                    </TableRow>
+                                    <TableRow>
+                                        <TableRowCell>Current value: </TableRowCell>
+                                        <TableRowCell>@($"{ToCurrentValue(context.Context.Trading):0.00}") @(context.Context.Trading.ReferenceSymbol)</TableRowCell>
+                                    </TableRow>
+                                    <TableRow>
+                                        <TableRowCell>Target: </TableRowCell>
+                                        <TableRowCell>@(ToPercentage(context.Context.Trading.TargetPercentageIncrease))%</TableRowCell>
+                                    </TableRow>
+                                    <TableRow>
+                                        <TableRowCell>Current: </TableRowCell>
+                                        <TableRowCell>@(ToPercentage(context.Context.Trading.CurrentPercentageIncrease))%</TableRowCell>
+                                    </TableRow>
+                                    <TableRow>
+                                        <TableRowCell>Duration: </TableRowCell>
+                                        <TableRowCell>@(ToTime(DateTime.Now - context.Context.Trading.Start))</TableRowCell>
+                                    </TableRow>
+                                </TableBody>
+                            </Table>
                         </CardText>
                         <Button 
                             Height="@ButtonHeight"
                             Width="@ButtonWidth"
-                            Color="Color.Danger" Clicked="@(() => ShowCancelDialog(context))"><Icon Name="@("fa-trash-alt")"/> Cancel<br/>(loss= ~234.87 USDT)</Button>
+                            Color="@(ToButtonColor(context.Context.Trading))" Clicked="@(() => ShowCancelDialog(context))"><Icon Name="@("fa-trash-alt")"/> Cancel @(ToLossMessage(context.Context.Trading))</Button>
                     </CardBody>
                 </Card>
             </Column>
         </Repeater>
-
     </Row>
     
     <Modal @ref="_cancelDialogRef">
@@ -66,7 +103,7 @@
             </ModalHeader>
             <ModalBody>
                 <Paragraph>Cancel trade: @(_runnerToDelete?.Context.Trading.Name)?</Paragraph>
-                <Paragraph>This will cause a loss of @($"{_runnerToDelete?.Context.Trading.Loss:0.00}") @(ApplicationContext.ReferenceSymbol)</Paragraph>
+                <Paragraph>@(ToCancelConfirmationMessage(_runnerToDelete?.Context.Trading))</Paragraph>
             </ModalBody>
             <ModalFooter>
                 <Button Color="Color.Secondary" Clicked="@CancelCanceled">No</Button>
