Small text correction.

--- a/EtAlii.BinanceMagic.Service/Trading/OneOff/OneOffList.razor
+++ b/EtAlii.BinanceMagic.Service/Trading/OneOff/OneOffList.razor
@@ -31,7 +31,7 @@
                                     <TableRowCell>@($"{_totalGuaranteedProfit:0.00} {ApplicationContext.ReferenceSymbol}")</TableRowCell>
                                 </TableRow>
                                 <TableRow>
-                                    <TableRowCell>Open: </TableRowCell>
+                                    <TableRowCell>Active: </TableRowCell>
                                     <TableRowCell>@(_totalOpen) trades</TableRowCell>
                                 </TableRow>
                                 <TableRow>
