--- a/EtAlii.CryptoMagic/Trading/OneOff/OneOffList.razor
+++ b/EtAlii.CryptoMagic/Trading/OneOff/OneOffList.razor
@@ -31,6 +31,10 @@
                                     <TableRowCell>@($"{_totalGuaranteedProfit:0.00} {ApplicationContext.ReferenceSymbol}")</TableRowCell>
                                 </TableRow>
                                 <TableRow>
+                                    <TableRowCell>Budget: </TableRowCell>
+                                    <TableRowCell>@($"{_referenceSymbolBalance:0.00} {ApplicationContext.ReferenceSymbol}")</TableRowCell>
+                                </TableRow>
+                                <TableRow>
                                     <TableRowCell>Active: </TableRowCell>
                                     <TableRowCell>@(_totalOpen) trades</TableRowCell>
                                 </TableRow>
@@ -82,6 +86,10 @@
                                     <TableRow>
                                         <TableRowCell>Duration: </TableRowCell>
                                         <TableRowCell>@(ToTime(DateTime.Now - context.Context.Trading.Start))</TableRowCell>
+                                    </TableRow>
+                                    <TableRow>
+                                        <TableRowCell>&nbsp;</TableRowCell>
+                                        <TableRowCell>&nbsp;</TableRowCell>
                                     </TableRow>
                                 </TableBody>
                             </Table>
