Added OneOff progress page.

--- a/EtAlii.CryptoMagic/Shared/NavMenu.razor
+++ b/EtAlii.CryptoMagic/Shared/NavMenu.razor
@@ -33,6 +33,12 @@
                         One-off
                     </BarLink>
                 </BarItem>
+                                
+                <BarItem>
+                    <BarLink To="/one-off/progress">
+                        Progress
+                    </BarLink>
+                </BarItem>
                 
                 <BarItem>
                     <BarLink To="/simple/list">
