Added missing character.

--- a/EtAlii.CryptoMagic/Trading/OneOff/OneOffProgressDashboard.razor
+++ b/EtAlii.CryptoMagic/Trading/OneOff/OneOffProgressDashboard.razor
@@ -76,7 +76,7 @@
                                 </TableRow>
                                 <TableRow>
                                     <TableRowCell>Average: </TableRowCell>
-                                    <TableRowCell>@($"{_averageYearTotal}")</TableRowCell>
+                                    <TableRowCell>~@($"{_averageYearTotal}")</TableRowCell>
                                 </TableRow>
                             </TableBody>
                         </Table>
